fix measure divs position and max-width to avoid overflow issues

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -160,6 +160,9 @@
     display: inline-block;
     white-space: nowrap;
     font-size: inherit;
+    max-width: 100%;
+    left: 0;
+    top: 0;
   }
 
   &--focus &__dropdown {
